--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
     border-radius: 15px;
     border: 3px solid #000;
     position: relative;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
 } 
 #card::-webkit-scrollbar{
@@ -33,8 +34,10 @@ body{
     border-bottom: 1px solid #dadada;
     padding: 15px;
     white-space: nowrap;
-    overflow-x: auto;
+    overflow-x: scroll;
     overflow-y: hidden; 
+    background-color: cadetblue;
+    /* overflow: scroll; */
 }
 #storiyan::-webkit-scrollbar{
     display: none;
@@ -69,7 +72,7 @@ body{
 
 
 
-#post{
+#post1{
     height: 400px;
     width: 350px;
     top: 0.1px;
@@ -79,13 +82,14 @@ body{
     flex-direction: column;
     scroll-behavior: smooth;
 }
-#post img{
+#post1 img{
     height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: center;
+    
 }
-#post i{
+#fir{
     color: #fff;
     font-size: 75px;
     position: absolute;
@@ -95,12 +99,107 @@ body{
     opacity: 0;
     transition: transform ease 0.5s;
 }
-#post h1{
+#post1 h1{
+    background-color: rgb(165, 217, 217);
+    height: 37px;
+    width: 100%;
+   
+}
+
+
+#post2{
+    height: 400px;
+    width: 350px;
+    top: 0.1px;
+    background-color: white;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    scroll-behavior: smooth;
+}
+#post2 img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+#sec{
+    color: #fff;
+    font-size: 75px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0);
+    opacity: 0;
+    transition: transform ease 0.5s;
+}
+#post2 h1{
     background-color: rgb(165, 217, 217);
     height: 35px;
     width: 100%;
    
 }
+
+
+#box{
+    height: 136px;
+    width: 315px;
+    background-color:cadetblue;
+    /* border: 1px solid #dadada; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#box img{
+   
+    height: 69px;
+    width: 296px;
+    border-radius: 60%;
+
+}
+#box h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#box h6 {s
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: blue;
+}
+#btn-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2px;
+   
+}
+
+#container{
+    height: 135px;
+    width: 350px;
+    background-color: red;
+    
+    display: flex;
+    margin-top: 35px;
+
+}
+#add{
+    background-color: rgb(51, 51, 191);
+    width: 200px;
+    height: 25px;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
 
 
 
